--- a/aws-microservices/src/ordering/package.json
+++ b/aws-microservices/src/ordering/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@src/basket",
+  "name": "@src/ordering",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,8 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.309.0",
-    "@aws-sdk/client-eventbridge": "^3.310.0",
-    "@aws-sdk/util-dynamodb": "^3.309.0"
+    "@aws-sdk/client-dynamodb": "^3.310.0",
+    "@aws-sdk/util-dynamodb": "^3.310.0"
   }
 }
